--- a/mywebsite.html
+++ b/mywebsite.html
@@ -1,7 +1,7 @@
 <html>
  <title>Still don't know what the <i>heck</i> you're doing in class?</title>
   <body>
-   <h2> Bruh, can it be aproximately 2 seconds til class is over?</h2>
+   <h2> Why isn't my title showing up (O_o)?</h2>
   </body>
 </html>
   
