--- a/mywebsite.html
+++ b/mywebsite.html
@@ -1,7 +1,7 @@
 <html>
  <title>TAB</title>
   <body>
-   <h2> Still don't know what the <i>H-E- double hockey sticks</i> you're doing in class?</h2>
+   <h2> Still don't know what the <i>H-E- DOUBLE HOCKEY STICKS</i> you're doing in class?</h2>
   </body>
 </html>
   
