--- a/mywebsite.html
+++ b/mywebsite.html
@@ -1,6 +1,6 @@
 <html>
  <title>TAB</title>
-  <body>
+  <body bg color="orange">
    <h2> Still don't know what the <b><i>H-E- DOUBLE HOCKEY STICKS</i></b> you're doing in class?</h2>
   </body>
 </html>
