--- a/mywebsite.html
+++ b/mywebsite.html
@@ -2,6 +2,8 @@
  <title>TAB</title>
   <body bgcolor="yellow">
    <h2> Still don't know what the <b><i>H-E- DOUBLE HOCKEY STICKS</i></b> you're doing in class?</h2>
-  </body>
+ <hr>
+   <p>ask your teacher then bruh</p>
+ </body>
 </html>
   
