--- a/askyourteacher.html
+++ b/askyourteacher.html
@@ -2,7 +2,7 @@
  <title>TAB</title>
   <body bgcolor="red">
    <h2> Ask your teacher</h2>
-  <a href"https://i.kym-cdn.com/photos/images/newsfee"width="100"height="100"border="5"></a>
+  <a href"https://i.kym-cdn.com/photos/images/newsfeed/001/077/553/666.jpg"></a>
  </body>
 </html>
   
