--- a/askyourteacher.html
+++ b/askyourteacher.html
@@ -2,7 +2,7 @@
  <title>TAB</title>
   <body bgcolor="red">
    <h2> Ask your teacher</h2>
-  <a href"https://i.kym-cdn.com/photos/images/newsfeed/001/077/553/666.jpg"></a>
+   <center><img src="https://donlifedaniel.github.io/myownthing/mywebsite.html"></center>
  </body>
 </html>
   
