--- a/askyourteacher.html
+++ b/askyourteacher.html
@@ -1,5 +1,5 @@
 <html>
- <title>TAB</title>
+ <title>ask</title>
   <body bgcolor="red">
    <h2> Ask your teacher</h2>
    <center><img src="https://donlifedaniel.github.io/myownthing/mywebsite.html"></center>
