--- a/askyourteacher.html
+++ b/askyourteacher.html
@@ -2,7 +2,7 @@
  <title>ask</title>
   <body bgcolor="red">
    <h2> Ask your teacher</h2>
-   <center><img src="https://donlifedaniel.github.io/myownthing/mywebsite.html"></center>
+   <center><"></center>
  </body>
 </html>
   
