--- a/askyourteacher.html
+++ b/askyourteacher.html
@@ -2,7 +2,7 @@
  <title>ask</title>
   <body bgcolor="red">
    <h2> Ask your teacher</h2>
-   <center><"></center>
+   <center><"monkey.jpg"></center>
  </body>
 </html>
   
