--- a/askyourteacher.html
+++ b/askyourteacher.html
@@ -1,6 +1,8 @@
 <html>
  <title>ask</title>
   <body bgcolor="red">
+  <a href="askyourteacher.html"> click here for good list
+    </a>
    <h2> Ask your teacher</h2>
  </body>
 </html>
