--- a/askyourteacher.html
+++ b/askyourteacher.html
@@ -1,7 +1,7 @@
 <html>
  <title>ask</title>
   <body bgcolor="red">
-  <a href="askyourteacher.html"> click here for good list
+  <a href="askyourteacher.html"> click here for the answer
     </a>
    <h2> Ask your teacher</h2>
  </body>
