--- a/mywebsite.html
+++ b/mywebsite.html
@@ -3,6 +3,8 @@
   <body bgcolor="yellow">
    <h2> Still don't know what the <b><i>H-E- DOUBLE HOCKEY STICKS</i></b> you're doing in class?</h2>
  <hr>
+   <a href="askyourteacher.html"> click here for the answer
+    </a>
    <p>ask your teacher then bruh</p>
  </body>
 </html>
