--- a/askyourteacher.html
+++ b/askyourteacher.html
@@ -1,7 +1,15 @@
 <html>
  <title>ask</title>
   <body bgcolor="red">
-   <h2> Ask your teacher</h2>
+   <center><big><h2> Ask your teacher</h2></big></center>
+   <br>
+   <br>
+   <center><big><p> Here is a list of other things to do </p></big></center>
+   <ul>
+    <li><a href="red.html"> GREAT option! </a></li>
+    <li><a href="blue.html">Suuuuper COOL thing! </a></li>
+    <li><a href="yellow.html"> Last but DEFINATLEY not least </a></li>
+   </ul>
  </body>
 </html>
   
