--- a/blue.html
+++ b/blue.html
@@ -1,10 +1,13 @@
 <html>
 <body>
-<body bgcolor="blue">
-<center><big><h1>Ask your teacher but in blue</h1></big></center>
+<body bgcolor="light green">
+<center><big><h1>Ask your teacher but in green</h1></big></center>
 <br>
 <br>
 <a href="askyourteacher.html"> Link back to the list </a>
+<br>
+  <br>
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGNl6luF77jSdseSYavQSgs_SQne7xIEdT4lZFYrh3VQ7buMcSkg&s" alt="man" >
 </body>
 </html>
-© 2019 GitHub, Inc.
+
