--- a/blue.html
+++ b/blue.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<body bgcolor="light green">
+<body bgcolor="#11FF00">
 <center><big><h1>Ask your teacher but in green</h1></big></center>
 <br>
 <br>
