--- a/askyourteacher.html
+++ b/askyourteacher.html
@@ -10,6 +10,9 @@
     <li><a href="blue.html">Suuuuper COOL thing! </a></li>
     <li><a href="yellow.html"> Last but DEFINATLEY not least </a></li>
    </ul>
+ <br>
+   <br>
+   <center><a href="mywebsite.html"> Back to home page </a></center>
  </body>
 </html>
   
