--- a/askyourteacher.html
+++ b/askyourteacher.html
@@ -1,6 +1,6 @@
 <html>
  <title>ask</title>
-  <body bgcolor="red">
+  <body bgcolor="#0ABAFA">
    <center><big><h2> Ask your teacher</h2></big></center>
    <br>
    <br>
