--- a/mywebsite.html
+++ b/mywebsite.html
@@ -1,6 +1,6 @@
 <html>
  <title>TAB</title>
-  <body bgcolor="yellow">
+  <body bgcolor="#EA0AFA">
    <center><big><h2> Still don't know what the <b><i>H-E- DOUBLE HOCKEY STICKS</i></b> you're doing in class?</h2></big></center>
  <hr>
    <center><big><a href="askyourteacher.html"> click here for the answer!</a></big></center>
